; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/i2c/extr_dw9807-vcm.c_dw9807_remove.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/i2c/extr_dw9807-vcm.c_dw9807_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i2c_client = type { i32 }
%struct.v4l2_subdev = type { i32 }
%struct.dw9807_device = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.i2c_client*)* @dw9807_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dw9807_remove(%struct.i2c_client* %0) #0 {
  %2 = alloca %struct.i2c_client*, align 8
  %3 = alloca %struct.v4l2_subdev*, align 8
  %4 = alloca %struct.dw9807_device*, align 8
  store %struct.i2c_client* %0, %struct.i2c_client** %2, align 8
  %5 = load %struct.i2c_client*, %struct.i2c_client** %2, align 8
  %6 = call %struct.v4l2_subdev* @i2c_get_clientdata(%struct.i2c_client* %5)
  store %struct.v4l2_subdev* %6, %struct.v4l2_subdev** %3, align 8
  %7 = load %struct.v4l2_subdev*, %struct.v4l2_subdev** %3, align 8
  %8 = call %struct.dw9807_device* @sd_to_dw9807_vcm(%struct.v4l2_subdev* %7)
  store %struct.dw9807_device* %8, %struct.dw9807_device** %4, align 8
  %9 = load %struct.i2c_client*, %struct.i2c_client** %2, align 8
  %10 = getelementptr inbounds %struct.i2c_client, %struct.i2c_client* %9, i32 0, i32 0
  %11 = call i32 @pm_runtime_disable(i32* %10)
  %12 = load %struct.dw9807_device*, %struct.dw9807_device** %4, align 8
  %13 = call i32 @dw9807_subdev_cleanup(%struct.dw9807_device* %12)
  ret i32 0
}

declare dso_local %struct.v4l2_subdev* @i2c_get_clientdata(%struct.i2c_client*) #1

declare dso_local %struct.dw9807_device* @sd_to_dw9807_vcm(%struct.v4l2_subdev*) #1

declare dso_local i32 @pm_runtime_disable(i32*) #1

declare dso_local i32 @dw9807_subdev_cleanup(%struct.dw9807_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
